fastapi/manifestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-namespaces-service
  namespace: get-namespaces
spec:
  selector:
    app: get-namespaces-app
  ports:
  - port: 80
    targetPort: 80
